# audiossl

./: .gitignore  LICENSE  README.md  setup.cfg  setup.py
audiossl/: __init__.py
audiossl/datasets/: __init__.py  as_strong.py  byol_a.py  dcase.py  iemocap.py  librispeech.py  lmdb.py  music_as_audio.py  registry.py  voxceleb1.py
audiossl/datasets/as_strong_utils/: as_strong_dict.py
audiossl/datasets/byol_a_meta/: us8k.csv
audiossl/datasets/dcase_utils/: __init__.py  collate_fn.py  datasets.py  encoder.py  sampler.py
audiossl/lightning/: datamodules.py  frame_datamodules.py  utils.py
audiossl/methods/atst/: README.md  data.py  model.py  train.py  train_base.sh  train_small.sh  transform.py
audiossl/methods/atst/docs/: data_prep.md
audiossl/methods/atst/downstream/: cal_norm.py  model.py  train_finetune.py  train_finetune_dcase.py  train_freeze.py  transform.py  utils.py
audiossl/methods/atst/transfer/: data.py  model.py  train.py  transform.py  utils.py
audiossl/methods/atstframe/: README.md  audio_transformer.py  audioset_train_base.yaml  byol.py  calculate_min_max.py  data.py  embedding.py  model.py  module_distill.py  module_distill_other.py  music_train_base.yaml  music_train_small.yaml  plot_attention.py  train.py  train_base.sh  train_distill.py  train_distill_other.py  train_small.sh  transform.py  visualize_attention.py
audiossl/methods/atstframe/downstream/: Inference_audioset_strong.py  balanced_sampling.py  data.py  ensemble.py  eval_ensemble.py  model.py  test.py  test_sampler.py  train_as_strong.py  train_dcase.py  train_finetune.py  train_finetune_dcase.py  train_freeze.py  train_freeze_hydra.py  transform.py  utils.py
audiossl/methods/dual/: builder.py  data.py  dual.py  model.py  random_mask.py  test.py  train.py  train_small.sh  trainsform_old.py  transform.py
audiossl/methods/dual/downstream/: model.py  train_freeze.py  transform.py
audiossl/methods/frame_atst/: audio_transformer.py  byol.py  callbacks.py  data.py  model.py  model_cls.py  plot_attention.py  prompt_tuning.py  random_mask.py  test.py  train.py  train_base.sh  train_cls.py  train_clsprompt.sh  train_small.sh  train_small_0220623.sh  transform.py  transform_cls.py
audiossl/methods/frame_atst/downstream/: model.py  train_finetune.py  train_freeze.py
audiossl/methods/frame_atst/wandb/: latest-run
audiossl/methods/mae/: data.py  mae.py  mae_old.py  model.py  transform.py
audiossl/methods/promptpool/: LOG  TODO  audio_transformer.py  byol.py  data.py  data_cls.py  data_promptpool.py  lbl_map.json  model.py  model_cls.py  model_promppool.py  model_promptpool.py  ontology.json  prompt_pool.py  query.py  random_mask.py  random_masking.py  train_142.sh  train_base_142.sh  train_batch.sh  train_promptpool.py  train_promptpool.sh  train_small.sh  train_small_20220622.sh  transform.py  visual_query.py
audiossl/methods/pyramid/: audio_transformer.py  byol.py  data.py  model.py  module_distill.py  module_distill_other.py  parse.py  test.sh  train.py  train_base.sh  train_distill.py  transform.py
audiossl/models/atst/: __init__.py  atst.py  audio_transformer.py  byol.py
audiossl/modules/: head.py  lr_scheduler.py  transformer.py
audiossl/transforms/: byol_a.py  common.py  target_transform.py
audiossl/utils/: common.py  plot.py
examples/atst/: README.md  data.py  model.py  train.py  transform.py
scripts/dataset_preprocess/: audioset.py  audioset_strong.bash  check_lmdb.py  dataset.py  dataset2lmdb.py  music_dataset.py  music_dataset_lmdb.py  speech_command_v2.py
scripts/dataset_preprocess/audioset_strong/: common_label_filtrate.py  gen_tsv.py  intersected_event_filtrate.py
scripts/dataset_preprocess/ccomhuqin/: audio_convert_utils.py  common_label_filtrate.py  gen_dataset.py  intersected_event_filtrate.py  pretrain_dataset_utils.py
(+210 files in other folders)
