[metadata] 
name = audiossl
author = lixian 
email = shysian@gmail.com
version = 0.1 
[options] 
install_requires = 
    absl-py==1.0.0
    aiohttp==3.8.1
    aiosignal==1.2.0
    alabaster==0.7.12
    antlr4-python3-runtime==4.8
    appdirs==1.4.4
    async-timeout==4.0.2
    asynctest==0.13.0
    attrs==21.4.0
    audioread==2.1.9
    cachetools==5.0.0
    certifi==2021.10.8
    cffi==1.15.0
    charset-normalizer==2.0.12
    click==8.1.1
    colorama==0.4.4
    cycler==0.11.0
    Cython==0.29.26
    dataclasses==0.6
    decorator==5.1.1
    docker-pycreds==0.4.0
    docstring-parser==0.13
    docutils==0.17.1
    efficientnet-pytorch==0.6.3
    einops==0.4.0
    fairseq==0.10.0
    filelock==3.6.0
    fonttools==4.29.0
    frozenlist==1.3.0
    fsspec==2022.2.0
    gitdb==4.0.9
    GitPython==3.1.27
    google-auth==2.6.2
    google-auth-oauthlib==0.4.6
    grpcio==1.44.0
    huggingface-hub==0.4.0
    hydra-core==1.1.1
    idna==3.3
    imageio==2.16.0
    imagesize==1.3.0
    importlib-metadata==4.11.3
    importlib-resources==5.4.0
    Jinja2==3.1.1
    joblib==1.1.0
    jsonargparse==4.5.0
    kiwisolver==1.3.2
    kornia==0.6.4
    librosa==0.9.1
    lightning-bolts==0.5.0
    lightning-flash==0.7.2
    llvmlite==0.38.0
    lmdb==1.3.0
    Markdown==3.3.6
    MarkupSafe==2.1.1
    matplotlib==3.5.1
    mkl-fft==1.3.1
    mkl-random==1.2.2
    mkl-service==2.4.0
    multidict==6.0.2
    munch==2.5.0
    networkx==2.6.3
    numba==0.55.1
    oauthlib==3.2.0
    omegaconf==2.1.1
    opencv-python==4.5.5.62
    packaging==21.3
    pandas==1.3.5
    pathtools==0.1.2
    pockets==0.9.1
    pooch==1.6.0
    portalocker==2.3.2
    pretrainedmodels==0.7.4
    promise==2.3
    protobuf==3.19.4
    psutil==5.9.0
    pyarrow==6.0.1
    pyasn1==0.4.8
    pyasn1-modules==0.2.8
    pycparser==2.21
    pyDeprecate==0.3.2
    Pygments==2.11.2
    pyparsing==3.0.7
    pystiche==1.0.1
    python-dateutil==2.8.2
    pytorch-lightning==1.6.0
    pytz==2021.3
    PyWavelets==1.2.0
    PyYAML==6.0
    regex==2022.1.18
    requests==2.27.1
    requests-oauthlib==1.3.1
    resampy==0.2.2
    rsa==4.8
    sacrebleu==2.0.0
    sacremoses==0.0.49
    scikit-image==0.19.2
    scikit-learn==1.0.2
    scipy==1.7.3
    segmentation-models-pytorch==0.2.1
    sentry-sdk==1.5.8
    setproctitle==1.2.2
    shortuuid==1.0.8
    six
    smmap==5.0.0
    snowballstemmer==2.2.0
    SoundFile==0.10.3.post1
    Sphinx==4.5.0
    sphinxcontrib-applehelp==1.0.2
    sphinxcontrib-devhelp==1.0.2
    sphinxcontrib-htmlhelp==2.0.0
    sphinxcontrib-jsmath==1.0.1
    sphinxcontrib-napoleon==0.7
    sphinxcontrib-qthelp==1.0.3
    sphinxcontrib-serializinghtml==1.1.5
    tabulate==0.8.9
    tensorboard==2.8.0
    tensorboard-data-server==0.6.1
    tensorboard-plugin-wit==1.8.1
    termcolor==1.1.0
    threadpoolctl==3.1.0
    tifffile==2021.11.2
    timm==0.4.12
    tokenizers==0.11.6
    toml
    torchaudio==0.10.1
    torchmetrics==0.7.3
    torchvision==0.11.2
    tqdm==4.62.3
    transformers==4.17.0
    urllib3==1.26.8
    wandb==0.12.11
    Werkzeug==2.1.0
    yarl==1.7.2
    yaspin==2.1.0
    zipp==3.7.0
