[metadata] 
name = audiossl
author = lixian 
email = shysian@gmail.com
version = 0.1 
[options] 
install_requires = 
    absl-py==1.0.0
    audioread==2.1.9
    dcase_util==0.2.20
    einops==0.4.0
    fairseq
    librosa
    lmdb==1.3.0
    matplotlib
    mkl-fft
    mkl-random
    mkl-service
    pandas
    psds_eval==0.5.3
    pyarrow==6.0.1
    pytorch-lightning==2.2.1
    scipy
    sed_eval==0.2.1
    tensorboard==2.8.0
    torchaudio
    torchvision
    tqdm==4.62.3
    wandb
    protobuf==3.20.1
    typeguard
    easydict
    nnAudio
    torchmetrics==0.7.3
